--- a/bookapp/templates/store_book.html
+++ b/bookapp/templates/store_book.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %} {% block content %} {% load crispy_forms_tags %}
-<div class="width:50%;margin:auto">
+{% extends "base.html" %} {% load crispy_forms_tags %} {% block content %}
+<div style="width: 50%; margin: auto">
   <form action="" method="post">{% csrf_token %} {{form|crispy}}</form>
 </div>
 {% endblock content %}
