--- a/bookapp/templates/base.html
+++ b/bookapp/templates/base.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Navbar</a>
         <button
@@ -42,7 +42,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Show Books</a>
+              <a class="nav-link" href="{%url 'show_book'%}">Show Books</a>
             </li>
           </ul>
         </div>
