--- a/bookapp/templates/store_book.html
+++ b/bookapp/templates/store_book.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %} {% load crispy_forms_tags %} {% block content %}
 <div style="width: 50%; margin: auto">
-  <form action="" method="post">{% csrf_token %} {{form|crispy}}</form>
+  <h1>Welcome to Book Store Management</h1>
+  <form action="" method="POST">
+    {% csrf_token %} {{form|crispy}}
+
+    <button type="submit" class="btn btn-info">Submit</button>
+  </form>
 </div>
 {% endblock content %}
